fix expiration seconds
