# openapi/management-open-api.yaml
@@ -2641,10 +2641,10 @@ components:
       - type: object
         title: TabularDeleteProfileSoft
         required:
-        - expiration_seconds
+        - expiration-seconds
         - type
         properties:
-          expiration_seconds:
+          expiration-seconds:
             type: string
           type:
             type: string
